앵귤러 라우팅 설정

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
       <link rel="stylesheet" href="app/app.css">
-      <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/item/item.css">
+      <link rel="stylesheet" href="app/items/items.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -62,8 +63,10 @@
         
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/main/main.controller.js"></script>
-          <script src="app/main/main.js"></script>
+          <script src="app/item/item.controller.js"></script>
+          <script src="app/item/item.js"></script>
+          <script src="app/items/items.controller.js"></script>
+          <script src="app/items/items.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
