--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
           <script src="app/item/item.js"></script>
           <script src="app/items/items.controller.js"></script>
           <script src="app/items/items.js"></script>
-          <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/services/Item.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
