백엔드 프로토콜 연동

--- a/client/app/item/item.html
+++ b/client/app/item/item.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="image">
-  <img src="{{item.image1_url}}" alt="상품이미지1" />
+  <img ng-src="{{item.image1_url}}" alt="상품이미지1" />
 </div>
 
 <div class="item-info">
@@ -15,3 +15,5 @@
 <div class="item-description">
   {{item.description}}
 </div>
+
+<a href="/items">목록</a>
